--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,34 +18,52 @@
         <div class="inner-form">
           <div class="input-field">
             <button class="btn-search" type="button">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-              >
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                 <path
-                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
-                ></path>
-              </svg>
+                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
+                </path>
+               </svg>
             </button>
-            <input
-              id="search"
-              type="text"
-              placeholder=""
-              value=""
-              style="border: 1px solid rgb(209, 209, 209); margin-top: 20px;"
-              formControl="input"
-              name="search"
-            />
+            <input id="search" type="text" placeholder="" value=""
+              style="border: 1px solid rgb(209, 209, 209); margin-top: 20px;" [formControl]="inputKeyword"
+              name="search" />
           </div>
         </div>
       </fieldset>
     </form>
   </div>
 
+  <div *ngIf="googleData">
+
+    <main role="main" class="flex-shrink-0" *ngFor="let item of googleData">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <!-- <img
+            src="{{ item.pagemap.cse_image.src }}"
+            alt="Organization Avatar"          /> -->
+          </div>
+          <div class="col-md-9">
+            <h3 class="mt-5">{{ item.title }}</h3>
+            <p class="lead">{{item.snippet}}  </p>
+            <p> <a href="{{item.link}}" target="_blank"> {{item.displayLink}}</a> </p>
+          </div>
+        </div>
+       
+      </div>
+    </main>
+
+    
+    
+  </div>
+  <div *ngIf="!googleData">
+    <p>No search result</p>
+  </div>
+
   <div class="" style="text-align: center;">
-    <button mat-flat-button class="google-search ">Google Search</button>
+    <button mat-flat-button class="google-search " (click)="searchData()">
+      Google Search
+    </button>
     <button mat-flat-button class="google-search ">I'm Feeling Lucky</button>
   </div>
 
@@ -55,3 +73,10 @@
     </p>
   </div>
 </body>
+
+
+<!-- <footer class="footer mt-auto py-3">
+  <div class="container">
+    <span class="text-muted">Ghana</span>
+  </div>
+</footer> -->
