--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
   </div>
 
   <div *ngIf="googleData">
-
+    <!-- Display list of searc results -->
     <main role="main" class="flex-shrink-0" *ngFor="let item of googleData">
       <div class="container">
         <div class="row">
@@ -56,7 +56,7 @@
     
     
   </div>
-  <div *ngIf="!googleData">
+  <div *ngIf="googleData">
     <!-- <p>No search result</p> -->
   </div>
 
