Search results listing

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -60,3 +60,12 @@ li {
   .showingForm{
     
   }
+
+
+  .iUh30{
+    font-size:14px;padding-top:1px;line-height:1.3
+  }
+
+  .footer-img{
+    text-align: center;margin-top: 30px
+  }
