--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -115,6 +115,9 @@
 </div>
 
 <div *ngIf="googleData">
+ <div class="footer-img">
+  <img src="../assets/google2.png" width="auto" height="35px" >
+ </div>
   <footer class="footer mt-auto py-3">
     <div class="container">
       <span class="text-muted">
