--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,130 +1,3 @@
 <!-- <div class="container"> -->
-<ul class="ul">
-  <li>Gmail</li>
-  <li>Images</li>
-  <i class="material-icons" style="color: grey;">apps</i>
-  <img src="../assets/user.jpg" width="40px" class="img" />
-</ul>
-<!-- </div> -->
-
-<div class="container" *ngIf="googleData" style="margin-top: 30px;">
-  <!-- <img src="../assets/google2.png" style=" " class="center" /> -->
-</div>
-
-<div class="container" *ngIf="!googleData">
-  <img src="../assets/google2.png"  class="center" />
-</div>
-
-<!-- <body> -->
-<div class="s006">
-  <form *ngIf="!googleData">  
-    <fieldset>
-      <div class="inner-form">
-        <div class="input-field">
-          <button class="btn-search" type="button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-              <path
-                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
-              </path>
-            </svg>
-          </button>
-          <input id="search" type="text" placeholder="" value=""
-            style="border: 1px solid rgb(209, 209, 209); margin-top: 20px;" [(ngModel)]="inputKeyword" name="search" />
-        </div>
-      </div>
-    </fieldset>
-  </form>
-
-  <form *ngIf="googleData" class="showingForm" style="margin-top: 50px;     margin-right: 40%;">
-    <div class="row">
-      <div class="col-md-4">
-        <a [routerLink]="['index']">
-          <img src="../assets/google2.png" style=" " class="center" />
-        </a>
-      </div>
-      <div class="col-md-8">
-        <fieldset>
-          <div class="inner-form">
-            <div class="input-field">
-              <!-- <button class="btn-search" type="button">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                  >
-                    <path
-                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
-                    ></path>
-                  </svg>
-                </button> -->
-              <input id="search" type="text" placeholder="" value=""
-                style="border: 1px solid rgb(209, 209, 209); margin-top: 20px; width: 850px;" [(ngModel)]="inputKeyword"
-                name="search" />
-                
-            </div>
-            
-          </div>
-        </fieldset>
-      </div>
-    </div>
-  </form>
-</div>
-
-<div *ngIf="googleData" style="margin-left:25%">
-    <p style="margin-top: -10px;"> About {{passDataResults}}  results ({{passDataSeconds  }}) seconds  </p>
-
-</div>
-
-<div *ngIf="googleData">
-  <!-- Display list of searc results -->
-  <main role="main" class="flex-shrink-0" *ngFor="let item of googleData">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <!-- <img
-            src="{{ item.pagemap?.cse_image?.src }}"
-            alt="Organization Avatar"          /> -->
-        </div>
-        <div class="col-md-9">
-          <div style="margin-top: 28px;margin-bottom: -4px">
-            <cite class="iUh30 bc tjvcx">{{item.displayLink}} &rsaquo; {{inputKeyword}}</cite></div>
-            <h4 style="color: #1A0DAB"><a href="{{ item?.link }}" target="_blank">
-              {{ item?.title }}</a></h4>
-          <p class="lead">{{ item?.snippet }}</p>
-        </div>
-      </div>
-    </div>
-  </main>
-</div>
-<div *ngIf="!googleData">
-  <!-- <p>No search result</p> -->
-
-  <div class="" style="text-align: center;">
-    <button mat-flat-button class="google-search " (click)="searchData()">
-      Google Search
-    </button>
-    <button mat-flat-button class="google-search ">I'm Feeling Lucky</button>
-  </div>
-
-  <div class="" style="text-align: center;">
-    <p>
-      Google offered in: <span style="color:#1a0dab">Hausa Akan Ewe Ga</span>
-    </p>
-  </div>
-</div>
-
-<div *ngIf="googleData">
- <div class="footer-img">
-  <img src="../assets/google2.png" width="auto" height="35px" >
- </div>
-  <footer class="footer mt-auto py-3">
-    <div class="container">
-      <span class="text-muted">
-        search result of
-        <span style="color:indigo">{{ inputKeyword  }}</span></span>
-    </div>
-  </footer>
-</div>
-
+<app-index></app-index>
 <router-outlet></router-outlet>
