--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!-- <div class="container"> -->
-<app-index></app-index>
-<router-outlet></router-outlet>
+<!-- <app-index></app-index> -->
+<router-outlet></router-outlet> 
