--- a/src/app/google-search/google-search.component.css
+++ b/src/app/google-search/google-search.component.css
@@ -1,16 +1,3 @@
-ul  {
-    float: right;
-    margin-right: 5px;
-    margin-top: 10px;
-}
-
-li {
-    display: block;
-    float: left;
-    margin: 10px;
-    color: #262626;
-    font-size: 15px;
-}
 
 .center {
     display: block;
@@ -40,26 +27,21 @@ li {
   }
 
 
-
-  /* index.html  */
-  ul > li >.li-nextpg{
-    cursor:pointer;
-  }
-
-  .footer {
-    background-color: #f5f5f5;
-    margin-bottom: 33px;
-  }
-
-  /* .showingForm{
-    
-  } */
-
-
   .iUh30{
     font-size:14px;padding-top:1px;line-height:1.3
   }
 
-  .footer-img{
-    text-align: center;margin-top: 30px
-  }
+
+
+
+
+
+
+
+
+
+
+  /* //// */
+
+
+  
