--- a/src/app/search-header/search-header.component.html
+++ b/src/app/search-header/search-header.component.html
@@ -1,6 +1,6 @@
   <!-- header  -->
   <ul class="ul">
-    <li [routerLink]="['/nextpage']" >Gmail</li>
+    <li [routerLink]="['/']" >Gmail</li>
     <li>Images</li>
     <i class="material-icons" style="color: grey;">apps</i>
     <img src="../assets/user.jpg" width="40px" class="img" />
