--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,60 +1,55 @@
 <!-- header  -->
 <search-header></search-header>
 <!-- header  -->
-  
-  <div class="container" *ngIf="googleData" style="margin-top: 30px;">
-    <!-- <img src="../assets/google2.png" style=" " class="center" /> -->
-  </div>
-  
-  <div class="container" *ngIf="!googleData">
-    <img src="../assets/google2.png"  class="center" />
-  </div>
-  
-  <!-- <body> -->
-  <div class="s006">
 
-    <!-- if theres no data request made -->
-    <form *ngIf="!googleData">  
-      <fieldset>
-        <div class="inner-form">
-          <div class="input-field">
-            <button class="btn-search" type="button">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                <path
-                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
-                </path>
-              </svg>
-            </button>
-            <!-- <input id="search" type="text" placeholder=" google search" value=""
+<div class="container" *ngIf="googleData" style="margin-top: 30px;">
+  <!-- <img src="../assets/google2.png" style=" " class="center" /> -->
+</div>
+
+<div class="container" *ngIf="!googleData">
+  <img src="../assets/google2.png" class="center" />
+</div>
+
+<!-- <body> -->
+<div class="s006">
+
+  <!-- if theres no data request made -->
+  <form *ngIf="!googleData">
+    <fieldset>
+      <div class="inner-form">
+        <div class="input-field">
+          <button class="btn-search" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+              <path
+                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
+              </path>
+            </svg>
+          </button>
+          <!-- <input id="search" type="text" placeholder=" google search" value=""
               style="border: 1px solid rgb(209, 209, 209); margin-top: 20px;" [(ngModel)]="inputKeyword" name="search" /> -->
 
-              <!-- very new enter to proceed search  -->
-              <!-- <input id="search" type="text" placeholder=" google search" value=""
-              style="border: 1px solid rgb(209, 209, 209); margin-top: 20px;" #input  (keyup.enter)="searchData(input.value)" name="search" />
-          -->
-              
-              <!-- your approach  -->
-        <input id="search" type="text" placeholder="" value=""
-          style="border: 1px solid rgb(209, 209, 209); margin-top: 20px;" [(ngModel)]="inputKeyword" (keyup.enter)="searchData(inputKeyword)" name="inputKeyword" /> 
-     
-            </div>
+          <input id="search" type="text" placeholder="" value=""
+            style="border: 1px solid rgb(209, 209, 209); margin-top: 20px;" [(ngModel)]="inputKeyword"
+            (keyup.enter)="searchData(inputKeyword)" name="inputKeyword" />
+
         </div>
-      </fieldset>
-    </form> 
-  
-    <!-- if theres theres data request made -->
-    <form *ngIf="googleData" class="showingForm" style="margin-top: 50px;     margin-right: 40%;">
-      <div class="row">
-        <div class="col-md-4">
-          <a [routerLink]="['index']">
-            <img src="../assets/google2.png"  class="center" />
-          </a>
-        </div>
-        <div class="col-md-8">
-          <fieldset>
-            <div class="inner-form">
-              <div class="input-field">
-                <!-- <button class="btn-search" type="button">
+      </div>
+    </fieldset>
+  </form>
+
+  <!-- if theres theres data request made -->
+  <form *ngIf="googleData" class="showingForm" style="margin-top: 50px;     margin-right: 40%;">
+    <div class="row">
+      <div class="col-md-4">
+        <a [routerLink]="['/index']">
+          <img src="../assets/google2.png" class="center" />
+        </a>
+      </div>
+      <div class="col-md-8">
+        <fieldset>
+          <div class="inner-form">
+            <div class="input-field">
+              <!-- <button class="btn-search" type="button">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="24"
@@ -66,91 +61,88 @@
                       ></path>
                     </svg>
                   </button> -->
-                <input id="search" type="text" placeholder="" value=""
-                  style="border: 1px solid rgb(209, 209, 209); margin-top: 20px; width: 850px;"  [(ngModel)]="inputKeyword" (keyup.enter)="searchData(inputKeyword)"
-                  name="search" />
-                  
-              </div>
-              
+              <input id="search" type="text" placeholder="" value=""
+                style="border: 1px solid rgb(209, 209, 209); margin-top: 20px; width: 850px;" [(ngModel)]="inputKeyword"
+                (keyup.enter)="searchData(inputKeyword)" name="search" />
+
             </div>
-          </fieldset>
+
+          </div>
+        </fieldset>
+      </div>
+    </div>
+  </form>
+</div>
+
+<!-- if theres theres data request made -->
+<div *ngIf="googleData" style="margin-left:25%">
+  <p style="margin-top: -10px;"> About {{passDataResults}} results ({{passDataSeconds  }}) seconds </p>
+</div>
+
+<!-- if theres theres data request made -->
+<div *ngIf="googleData">
+  <!-- Display list of searc results -->
+  <main role="main" class="flex-shrink-0" *ngFor="let item of googleData">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+
+        </div>
+        <div class="col-md-9">
+          <div style="margin-top: 28px;margin-bottom: -4px">
+            <cite class="iUh30 bc tjvcx">{{item.displayLink}} &rsaquo; {{inputKeyword}}</cite></div>
+          <h4 style="color: #1A0DAB"><a href="{{ item?.link }}" target="_blank">
+              {{ item?.title }}</a></h4>
+          <p class="lead">{{ item?.snippet }}</p>
         </div>
       </div>
-    </form>
-  </div>
-  
-  <!-- if theres theres data request made -->
-  <div *ngIf="googleData" style="margin-left:25%">
-      <p style="margin-top: -10px;"> About {{passDataResults}}  results ({{passDataSeconds  }}) seconds  </p>
-  </div>
-  
-  <!-- if theres theres data request made -->
-  <div *ngIf="googleData">
-    <!-- Display list of searc results -->
-    <main role="main" class="flex-shrink-0" *ngFor="let item of googleData">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3">
-            <!-- <img
-              src="{{ item.pagemap?.cse_image?.src }}"
-              alt="Organization Avatar"          /> -->
-          </div>
-          <div class="col-md-9">
-            <div style="margin-top: 28px;margin-bottom: -4px">
-              <cite class="iUh30 bc tjvcx">{{item.displayLink}} &rsaquo; {{inputKeyword}}</cite></div>
-              <h4 style="color: #1A0DAB"><a href="{{ item?.link }}" target="_blank">
-                {{ item?.title }}</a></h4>
-            <p class="lead">{{ item?.snippet }}</p>
-          </div>
-        </div>
-      </div>
-    </main>
-  </div>
-
-  <!-- if theres theres  no data request made -->
-  <!-- button to click instead of key press  -->
-  <div *ngIf="!googleData">
-    <div class="" style="text-align: center;">
-      <button mat-flat-button class="google-search " (click)="searchData(inputKeyword)">
-        Google Search
-      </button>
-      <!-- <button mat-flat-button class="google-search " [routerLink]="['/nextpage']" routerLinkActive="router-link-active" >
-        Google Search
-      </button> -->
-      <button mat-flat-button class="google-search " >I'm Feeling Lucky</button>
     </div>
-  
-    <div class="" style="text-align: center;">
-      <p>
-        Google offered in: <span style="color:#1a0dab">Hausa Akan Ewe Ga</span>
-      </p>
-    </div>
-  </div>
-  
+  </main>
+</div>
 
-  <!-- footer  -->
+<!-- if theres theres  no data request made -->
+<!-- button to click instead of key press  -->
+<div *ngIf="!googleData">
+  <div class="" style="text-align: center;">
+    <button mat-flat-button class="google-search " (click)="searchData(inputKeyword)">
+      Google Search
+    </button>
 
-  <div *ngIf="googleData">
-   <div class="footer-img">
-    <img src="../assets/google2.png" width="auto" height="35px" >
-    </div>
-    <br>
-    <br>
-    <ul style="text-align: center; margin-top: -40px; ">
-        <li class="li-nextpg">1</li>
-        <li [routerLink]="['/nextpage']" routerLinkActive="router-link-active"  class="li-nextpg" (click)="nextPage()" style="cursor:pointer">2</li>
-        <li >3</li>
-        <li class="li-nextpg">4</li>
-        <li class="li-nextpg">5</li>
-    </ul>
-
-    <footer class="footer mt-auto py-3">
-      <div class="container">
-        <span class="text-muted">
-          search result of
-          <span style="color:indigo">{{ inputKeyword  }}</span></span>
-      </div>
-    </footer>
+    <button mat-flat-button class="google-search ">I'm Feeling Lucky</button>
   </div>
 
-  <!-- <app-nextpage [inputKeyword]="inputKeyword"></app-nextpage> -->
+  <div class="" style="text-align: center;">
+    <p>
+      Google offered in: <span style="color:#1a0dab">Hausa Akan Ewe Ga</span>
+    </p>
+  </div>
+</div>
+
+
+<!-- footer  -->
+
+<div *ngIf="googleData">
+  <div class="footer-img">
+    <img src="../assets/google2.png" width="auto" height="35px">
+  </div>
+  <br>
+  <br>
+  <ul style="text-align: center; margin-top: -40px; ">
+    <li class="li-nextpg">1</li>
+    <li [routerLink]="['/nextpage']" routerLinkActive="router-link-active" class="li-nextpg" (click)="nextPage()"
+      style="cursor:pointer">2</li>
+    <li>3</li>
+    <li class="li-nextpg">4</li>
+    <li class="li-nextpg">5</li>
+  </ul>
+
+  <footer class="footer mt-auto py-3">
+    <div class="container">
+      <span class="text-muted">
+        search result of
+        <span style="color:indigo">{{ inputKeyword  }}</span></span>
+    </div>
+  </footer>
+</div>
+
+<!-- <app-nextpage [inputKeyword]="inputKeyword"></app-nextpage> -->
